tests/errors/bare-variant-ambiguous/main.pa
enum boxed {
	wrap int
}

enum tagged {
	wrap string
}

# A bare variant *constructor* (one taking arguments) must be qualified. Two enums
# declare `wrap` and the subject's type isn't known here (`x` is a fresh type var),
# so the help offers both `boxed.wrap` and `tagged.wrap`. A bare nullary identifier,
# by contrast, would be read as a binding.
def check = fun x {
	when x is wrap _ {
		0
	} else {
		1
	}
}
